Changed background color to 5dade2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
     
     .hero-gradient {
-      background: linear-gradient(135deg, #5eead4 0%, #67e8f9 100%);
+      background: linear-gradient(135deg, #5dade2 0%, #67e8f9 100%);
     }
     
     .card-hover {
