Added photo and changed frame size

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
       <div class="animate-fadeInUp">
         <!-- Personal Photo -->
         <div class="mb-8">
-          <div class="w-32 h-32 md:w-40 md:h-40 mx-auto rounded-full border-4 border-white/30 overflow-hidden shadow-2xl mb-6">
-            <img src="https://via.placeholder.com/160x160/667eea/ffffff?text=תמונה+אישית" alt="תמונה אישית" class="w-full h-full object-cover">
+          <div class="w-32 h-32 md:w-80 md:h-80 mx-auto rounded-full border-4 border-white/30 overflow-hidden shadow-2xl mb-6">
+            <img src="/home/avihai/repos/ShayLeviLandingPage/image.png" alt="תמונה אישית" class="w-full h-full object-cover">
           </div>
           <h1 class="text-5xl md:text-7xl font-bold mb-4 leading-tight">
             תכנון פיננסי <span class="text-yellow-300">בטוח</span>
