Adjusted logo size

--- a/index.html
+++ b/index.html
@@ -201,10 +201,11 @@
 <body class="bg-gray-50 text-gray-800">
   
   <!-- Logo Section -->
-  <div class="absolute top-4 right-4 z-50">
-    <!-- Replace 'logo.png' with your actual logo file -->
-    <img src="logo.png" alt="לוגו שי לוי תכנון פיננסי" class="h-90 md:h-96 w-auto opacity-90 hover:opacity-100 transition-opacity duration-300">
-  </div>
+<div class="absolute top-4 right-4 z-50">
+  <img src="logo.png" 
+       alt="לוגו שי לוי תכנון פיננסי" 
+       class="max-h-[15vh] md:max-h-[20vh] lg:max-h-[25vh] w-auto opacity-90 hover:opacity-100 transition-opacity duration-300">
+</div>
 
   <!-- Hero Section -->
   <section class="hero-gradient relative min-h-screen flex items-center justify-center text-white">
