changed mail for testing

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
         
         <!-- Contact Form -->
         <div class="animate-fadeInUp">
-          <form id="contactForm" form action="https://formsubmit.co/shay@tmu.co.il" method="POST" class="bg-white p-8 rounded-2xl shadow-2xl border border-gray-100 space-y-6">
+          <form id="contactForm" form action="https://formsubmit.co/avihi119@gmail.com" method="POST" class="bg-white p-8 rounded-2xl shadow-2xl border border-gray-100 space-y-6">
             <input type="hidden" name="_captcha" value="false">
             <input type="text" name="_honey" style="display:none">
             <input type="hidden" name="_captcha" value="false">
