--- a/index.html
+++ b/index.html
@@ -598,12 +598,10 @@
         
         <!-- Contact Form -->
         <div class="animate-fadeInUp">
-          <form id="contactForm" form action="https://formsubmit.co/avihi119@gmail.com" method="POST" class="bg-white p-8 rounded-2xl shadow-2xl border border-gray-100 space-y-6">
+          <form id="contactForm" action="https://formsubmit.co/avihi119@gmail.com" method="POST" class="bg-white p-8 rounded-2xl shadow-2xl border border-gray-100 space-y-6">
             <input type="hidden" name="_captcha" value="false">
             <input type="text" name="_honey" style="display:none">
-            <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_next" value="https://avihai119.github.io/ShayLeviLandingPage/?success=true">
-            <input type="text" name="_honey" style="display:none">
             
             <div>
               <label class="block mb-2 font-semibold text-gray-700">שם מלא</label>
