--- a/index.html
+++ b/index.html
@@ -211,6 +211,24 @@
     #successModal.show .modal-content {
       transform: scale(1);
     }
+
+    .service-details ul {
+      list-style: none;
+      padding-right: 0;
+      margin: 0;
+    }
+
+    .service-details li i {
+      flex-shrink: 0;
+    }
+
+    .service-details li {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+
   </style>
 </head>
 <body class="bg-gray-50 text-gray-800">
