Revert "fixed mobile styling issues"
This reverts commit d2bdc27ffb5b01ab2538ef6e5d0c0eec7fb9bcfd.

--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
 </head>
 <body class="bg-gray-50 text-gray-800">
   
-<!-- Logo Section -->
-<div class="absolute top-2 left-2 md:top-4 md:left-4 z-50">
+  <!-- Logo Section -->
+<div class="absolute top-4 right-4 z-50">
   <img src="logo.png" 
        alt="לוגו שי לוי תכנון פיננסי" 
-       class="max-h-[10vh] md:max-h-[15vh] lg:max-h-[20vh] w-auto opacity-90 hover:opacity-100 transition-opacity duration-300">
+       class="max-h-[15vh] md:max-h-[20vh] lg:max-h-[25vh] w-auto opacity-90 hover:opacity-100 transition-opacity duration-300">
 </div>
 
   <!-- Hero Section -->
