fixed customer slding bullets

--- a/index.html
+++ b/index.html
@@ -228,6 +228,22 @@
       gap: 0.5rem;
     }
 
+    ul {
+      list-style: none !important;
+      padding-right: 0 !important;
+      margin: 0 !important;
+    }
+
+    li {
+      display: flex;
+      align-items: flex-start;
+      gap: 0.5rem;
+    }
+
+    ul, li, p {
+      direction: rtl;
+      text-align: right;
+    }
 
   </style>
 </head>
