--- a/index.html
+++ b/index.html
@@ -228,25 +228,22 @@
       gap: 0.5rem;
     }
 
-    /* --- התחלת התיקון --- */
-    /* כללים גורפים: הוספת padding-right כדי להזיח את רשימות הבולטים ימינה */
     ul {
       list-style: none !important;
-      padding-right: 20px !important; /* <--- התיקון שהוסף */
+      padding-right: 20px !important;
       margin: 0 !important;
     }
 
     li {
       display: flex;
       align-items: flex-start;
-      gap: 0.5rem;
+      gap: 0.75rem;
     }
 
     ul, li, p {
       direction: rtl;
       text-align: right;
     }
-    /* --- סוף התיקון --- */
 
   </style>
 </head>
