--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>שי לוי תכנון פיננסי בטוח | סוכן פנסיה וביטוח</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <style>
+<style>
     @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&display=swap');
     
     * {
@@ -212,9 +212,10 @@
       transform: scale(1);
     }
 
+    /* FIX #1 - הוספת הזחה ספציפית לרשימות השירותים */
     .service-details ul {
       list-style: none;
-      padding-right: 0;
+      padding-right: 20px; /* תוקן מ-0 ל-20px */
       margin: 0;
     }
 
@@ -228,16 +229,17 @@
       gap: 0.5rem;
     }
 
+    /* FIX #2 & #3 - כללים גורפים: הוספת הזחה והגדלת מרווחים */
     ul {
       list-style: none !important;
-      padding-right: 20px !important;
+      padding-right: 25px !important; /* תוקן מ-0 ל-25px, כדי להזיח את הרשימה כולה */
       margin: 0 !important;
     }
 
     li {
       display: flex;
       align-items: flex-start;
-      gap: 0.75rem;
+      gap: 0.75rem; /* תוקן מ-0.5rem ל-0.75rem, כדי להגדיל את המרווח בין הבולט לטקסט */
     }
 
     ul, li, p {
@@ -245,7 +247,7 @@
       text-align: right;
     }
 
-  </style>
+</style>
 </head>
 <body class="bg-gray-50 text-gray-800">
   
